# yxbase

./: .gitignore  .gn  BUILD.gn  README.md  args.gn  compile.bat  create_yxbase_run_in_vs_cmd.bat
base/: sha1.cc  (+3 more)
example/base/: BUILD.gn
example/containers/: BUILD.gn
example/crypto/: BUILD.gn
example/files/: BUILD.gn
example/http_server/: BUILD.gn  http_server.cc  http_server.h
example/i18n/: BUILD.gn
example/json/: BUILD.gn
example/power_monitor/: BUILD.gn
example/process/: BUILD.gn
example/sample/: BUILD.gn  sample.cc
example/sql/: BUILD.gn
example/synchronization/: BUILD.gn  main.cc
example/sys_info/: BUILD.gn  sys_info.cc
example/system_monitor/: BUILD.gn
example/thread/: BUILD.gn  thread.cc
example/url/: BUILD.gn  run_all_unittests.cc
example/url_request/: BUILD.gn  url_request.cc  url_request_context_getter.cc  url_request_context_getter.h
example/websocket_server/: BUILD.gn  websocket.html  websocket_server.cc  websocket_server.h
example/win/: BUILD.gn
ui/display/: BUILD.gn  DEPS  OWNERS  display.cc  display.h  display_change_notifier.cc  display_change_notifier.h  display_change_notifier_unittest.cc  display_export.h  display_finder.cc  display_finder.h  display_layout.cc  display_layout.h  display_layout_builder.cc  display_layout_builder.h  display_layout_builder_unittest.cc  display_layout_unittest.cc  display_list.cc  display_list.h  display_list_unittest.cc  display_observer.cc  display_observer.h  display_switches.cc  display_switches.h  display_unittest.cc  fake_display_delegate.cc  fake_display_delegate.h  fake_display_snapshot.cc  fake_display_snapshot.h  fake_display_snapshot_unittests.cc  screen.cc  screen.h  screen_android.cc  screen_aura.cc  screen_base.cc  screen_base.h  screen_unittest.cc
ui/display/ios/: screen_ios.mm
ui/display/mac/: screen_mac.mm
ui/display/manager/: BUILD.gn  DEPS  display_layout_store.cc  display_layout_store.h  display_manager.cc  display_manager.h  display_manager_export.h  display_manager_utilities.cc  display_manager_utilities.h  display_manager_utilities_unittest.cc  display_pref_util.h  forwarding_display_delegate.cc  forwarding_display_delegate.h  json_converter.cc  json_converter.h  json_converter_unittest.cc  managed_display_info.cc  managed_display_info.h  managed_display_info_unittest.cc
ui/display/manager/chromeos/: DEPS  apply_content_protection_task.cc  apply_content_protection_task.h  apply_content_protection_task_unittest.cc  configure_displays_task.cc  configure_displays_task.h  configure_displays_task_unittest.cc  default_touch_transform_setter.cc  default_touch_transform_setter.h  display_change_observer.cc  display_change_observer.h  display_change_observer_unittest.cc  display_configurator.cc  display_configurator.h  display_configurator_unittest.cc  display_layout_manager.h  display_util.cc  display_util.h  query_content_protection_task.cc  query_content_protection_task.h  query_content_protection_task_unittest.cc  touch_device_transform.cc  touch_device_transform.h  (+10 more)
ui/display/mojo/: BUILD.gn  OWNERS  display.mojom  display.typemap  display_constants.mojom  display_constants.typemap  display_constants_struct_traits.cc  display_constants_struct_traits.h  display_layout.mojom  display_layout.typemap  display_layout_struct_traits.cc  display_layout_struct_traits.h  display_mode.mojom  display_mode.typemap  display_mode_struct_traits.cc  display_mode_struct_traits.h  display_snapshot_mojo.mojom  display_snapshot_mojo.typemap  display_snapshot_mojo_struct_traits.cc  display_snapshot_mojo_struct_traits.h  display_struct_traits.cc  display_struct_traits.h  display_struct_traits_unittest.cc  gamma_ramp_rgb_entry.mojom  gamma_ramp_rgb_entry.typemap  gamma_ramp_rgb_entry_struct_traits.cc  gamma_ramp_rgb_entry_struct_traits.h  native_display_delegate.mojom  typemaps.gni
ui/display/test/: display_manager_test_api.cc  display_manager_test_api.h  display_matchers.cc  display_matchers.h  display_test_util.h  test_screen.cc  test_screen.h
ui/display/types/: BUILD.gn  DEPS  display_constants.h  display_mode.cc  display_mode.h  display_snapshot.cc  display_snapshot.h  display_snapshot_mojo.cc  display_snapshot_mojo.h  display_types_export.h  fake_display_controller.h  gamma_ramp_rgb_entry.h  native_display_delegate.cc  native_display_delegate.h  native_display_observer.h
ui/display/util/: BUILD.gn  display_util.cc  display_util.h  display_util_export.h  display_util_unittest.cc  edid_parser.cc  edid_parser.h  edid_parser_fuzzer.cc  edid_parser_unittest.cc
ui/display/win/: OWNERS  display_info.cc  display_info.h  dpi.cc  dpi.h  scaling_util.cc  scaling_util.h  scaling_util_unittest.cc  screen_win.cc  screen_win.h  screen_win_display.cc  screen_win_display.h  screen_win_unittest.cc
ui/gfx/: BUILD.gn  buffer_types.h  gfx_export.h  native_widget_types.h
ui/gfx/geometry/: BUILD.gn  OWNERS  axis_transform2d.cc  axis_transform2d.h  axis_transform2d_unittest.cc  box_f.cc  box_f.h  box_unittest.cc  cubic_bezier.cc  cubic_bezier.h  cubic_bezier_unittest.cc  dip_util.cc  dip_util.h  insets.cc  insets.h  insets_f.cc  insets_f.h  insets_unittest.cc  matrix3_f.cc  matrix3_f.h  matrix3_unittest.cc  point.cc  point.h  point3_f.cc  point3_f.h  point3_unittest.cc  point_conversions.cc  point_conversions.h  point_f.cc  point_f.h  point_unittest.cc  quad_f.cc  quad_f.h  quad_unittest.cc  rect.cc  rect.h  rect_conversions.cc  rect_conversions.h  rect_f.cc  rect_f.h  (+23 more)
ui/gfx/range/: BUILD.gn  OWNERS  gfx_range_export.h  range.cc  range.h  range_f.cc  range_f.h  range_mac.mm  range_mac_unittest.mm  range_unittest.cc  range_win.cc  range_win_unittest.cc
ui/gfx/win/: direct_manipulation.cc  direct_manipulation.h  direct_write.cc  direct_write.h  hwnd_util.cc  hwnd_util.h  msg_util.h  physical_size.cc  physical_size.h  rendering_window_manager.cc  rendering_window_manager.h  scoped_set_map_mode.h  singleton_hwnd.cc  singleton_hwnd.h  singleton_hwnd_observer.cc  singleton_hwnd_observer.h  text_analysis_source.cc  text_analysis_source.h  text_analysis_source_unittest.cc  window_impl.cc  window_impl.h
(+14773 files in other folders)
