# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("root") {
  testonly = true
  deps = [
    "//example/sample:sample",
    "//example/log:log",
    "//example/sys_info:sys_info",
    "//example/thread:thread",
    "//example/url_request:url_request",
    "//example/http_server:http_server",
    "//example/websocket_server:websocket_server",
    "//example/crypto:crypto",
    "//example/url:url",
    "//example/sql:sql",
    "//example/json:json",
    "//example/i18n:i18n",
    "//example/synchronization:synchronization",
    "//example/process:process",
    "//example/files:files",
    "//example/containers:containers",
    "//example/win:win",
    "//example/power_monitor:power_monitor",
    "//example/system_monitor:system_monitor",
  ]
}