# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("http_server") {
  output_dir = "$root_out_dir/example"

  deps = [
    "//base:base",
    "//net:net",
    "//net:http_server",
  ]
  
  sources = [
    "//example/http_server/http_server.cc",
    "//example/http_server/http_server.h",
  ]
}
