# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("sample") {
  output_dir = "$root_out_dir/example"

  deps = [
    "//base:base",
  ]
  
  sources = [
    "//example/sample/sample.cc",
  ]
}
