# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("sys_info") {
  output_dir = "$root_out_dir/example"

  deps = [
    "//base:base",
    "//ui/gfx:gfx_win",
    "//ui/gfx/geometry:geometry",
    "//ui/gfx/range:range",
    "//ui/display:display",
  ]
  
  sources = [
    "//example/sys_info/sys_info.cc",
  ]
}
