# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("system_monitor") {
  testonly = true
  output_dir = "$root_out_dir/system_monitor"

  deps = [
    "//base:base",
    "//base/test:test_support",
    "//testing/gtest",
    "//testing/gmock",
  ]
  
  sources = [
    "//example/system_monitor/main.cc",
    "//example/system_monitor/system_monitor_unittest.cc",
  ]
}
