# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("example_thread") {
  output_name = "example_thread"

  deps = [
    "//base:base",
  ]
  
  sources = [
    "//example/thread/thread.cc",
  ]
}
